--- a/app.json
+++ b/app.json
@@ -9,6 +9,11 @@
         "name": "Marco van den Hout",
         "email": "marco@vandenhout.org"
     },
+    "images": {
+      "large": "./assets/images/large.jpg",
+      "small": "./assets/images/small.jpg"
+    },
+    "category": "appliances",
     "description": {
     "en": "Marantz IP control app for Homey",
     "nl": "Dit is een Marantz IP aansturing app voor Homey"
@@ -52,7 +57,8 @@
         {
             "id": "powerOn",
             "title": {
-                "en": "Turn power on"
+                "en": "Turn power on",
+                "nl": "Zet aan"
             },
             "args": [
               {
@@ -62,7 +68,7 @@
                   "width": "50%"
                 },
                 "placeholder": {
-                  "en": "Select amp",
+                  "en": "Select amplifier",
                   "nl": "Selecteer versterker"
                 }
               }
@@ -71,7 +77,8 @@
         {
             "id": "standby",
             "title": {
-                "en": "Go to standby"
+                "en": "Go to standby",
+                "nl": "Ga naar standby"
             },
             "args": [
               {
@@ -81,7 +88,7 @@
                   "width": "50%"
                 },
                 "placeholder": {
-                  "en": "Select amp",
+                  "en": "Select amplifier",
                   "nl": "Selecteer versterker"
                 }
               }
