--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": {
         "en": "Marantz"
     },
-    "version": "0.0.6",
+    "version": "0.0.7",
     "compatibility": "0.x || 1.x",
     "author": {
         "name": "Marco van den Hout",
@@ -32,8 +32,7 @@
               "large": "drivers/amplifier/assets/images/large.jpg",
               "small": "drivers/amplifier/assets/images/small.jpg"
           },
-          "class": "other",
-          "capabilities": [ "" ],
+          "class": "speaker",
           "pair": [
             {
               "id": "start"
