--- a/app.json
+++ b/app.json
@@ -15,8 +15,8 @@
     },
     "category": "appliances",
     "description": {
-    "en": "Marantz IP control app for Homey",
-    "nl": "Dit is een Marantz IP aansturing app voor Homey"
+      "en": "Marantz IP control app for Homey",
+      "nl": "Dit is een Marantz IP aansturing app voor Homey"
     },
     "dependencies": {
     		"net": "*"
@@ -32,8 +32,16 @@
               "large": "drivers/amplifier/assets/images/large.jpg",
               "small": "drivers/amplifier/assets/images/small.jpg"
           },
-          "class": "speaker",
-          "capabilities": [ "onoff", "volume_set", "volume_down", "volume_up", "volume_mute" ],
+          "class": "other",
+          "capabilities": [ "onoff" ],
+          "mobile": {
+	           "components": [
+	              {
+		                "id": "icon",
+		                "capabilities": ["onoff"]
+		            }
+		         ]
+          },
           "pair": [
             {
               "id": "start"
@@ -54,14 +62,16 @@
             {
               "type": "group",
                       "label": {
-                          "en": "General settings"
+                          "en": "General settings",
+                          "nl": "Algemene instellingen"
                       },
                       "children": [
                           {
                               "id": "settingIPAddress",
                               "type": "text",
                               "label": {
-                                  "en": "IP address"
+                                  "en": "IP address",
+                                  "nl": "IP adres"
                               },
                               "value": "0.0.0.0"
                           }
@@ -85,7 +95,8 @@
                 "placeholder": {
                   "en": "Select amplifier",
                   "nl": "Selecteer versterker"
-                }
+                },
+                "filter": "driver_id=amplifier"
               },
               {
                 "name": "zone",
@@ -116,7 +127,8 @@
                 "placeholder": {
                   "en": "Select amplifier",
                   "nl": "Selecteer versterker"
-                }
+                },
+                "filter": "driver_id=amplifier"
               },
               {
                 "name": "zone",
@@ -155,7 +167,8 @@
                 "placeholder": {
                   "en": "Select amplifier",
                   "nl": "Selecteer versterker"
-                }
+                },
+                "filter": "driver_id=amplifier"
               },
               {
                 "name": "zone",
@@ -182,7 +195,8 @@
                 "placeholder": {
                   "en": "Select amplifier",
                   "nl": "Selecteer versterker"
-                }
+                },
+                "filter": "driver_id=amplifier"
               },
               {
                 "name": "zone",
@@ -209,7 +223,8 @@
                 "placeholder": {
                   "en": "Select amplifier",
                   "nl": "Selecteer versterker"
-                }
+                },
+                "filter": "driver_id=amplifier"
               },
               {
                 "name": "zone",
@@ -236,7 +251,8 @@
                 "placeholder": {
                   "en": "Select amplifier",
                   "nl": "Selecteer versterker"
-                }
+                },
+                "filter": "driver_id=amplifier"
               },
               {
                 "name": "zone",
