Add custom command action
Added send custom command action, allowing for raw commands that are
not covered yet (e.g. send MVUP to turn master volume one step up)

--- a/app.json
+++ b/app.json
@@ -275,6 +275,30 @@
                 }
               }
             ]
+        },
+        {
+            "id": "customCommand",
+            "title": {
+                "en": "Send raw command"
+            },
+            "args": [
+              {
+                "name": "command",
+                "type": "text",
+                "placeholder": {
+                  "en": "command"
+                }
+              },
+              {
+                "name": "device",
+                "type": "device",
+                "placeholder": {
+                  "en": "Select amplifier",
+                  "nl": "Selecteer versterker"
+                },
+                "filter": "driver_id=amplifier"
+              }
+            ]
         }
       ]
     }
