--- a/app.json
+++ b/app.json
@@ -3,11 +3,18 @@
     "name": {
         "en": "Marantz"
     },
-    "version": "0.0.7",
+    "version": "0.0.8",
     "compatibility": "0.x || 1.x",
-    "author": {
-        "name": "Marco van den Hout",
-        "email": "marco@vandenhout.org"
+    "contributors": {
+      "developers": [
+        {
+          "name": "Marco van den Hout",
+          "email": "marco@vandenhout.org"
+        },
+        {
+          "name": "Kerk en IT"
+        }
+      ]
     },
     "images": {
       "large": "./assets/images/large.jpg",
@@ -272,6 +279,44 @@
                 "placeholder": {
                    "en": "Target volume",
                    "nl": "Gewenst volume"
+                }
+              }
+            ]
+        },
+        {
+            "id": "setVolumeStep",
+            "title": {
+                "en": "Change volume up/down",
+                "nl": "Verhoog/verlaag volume"
+            },
+            "args": [
+              {
+                "name": "device",
+                "type": "device",
+                "placeholder": {
+                  "en": "Select amplifier",
+                  "nl": "Selecteer versterker"
+                },
+                "filter": "driver_id=amplifier"
+              },
+              {
+                "name": "zone",
+                "type": "dropdown",
+                "values": [
+                  { "id": "Main Zone", "label": { "en": "Main Zone" }},
+                  { "id": "Zone2", "label": { "en": "Zone 2" }},
+                  { "id": "Zone3", "label": { "en": "Zone 3" }}
+                ],
+                "placeholder": { "en": "Zone" }
+              },
+              {
+                "name": "volume",
+                "type": "number",
+                "min": -99,
+                "max": 99,
+                "placeholder": {
+                   "en": "Step-by-step",
+                   "nl": "Stapsgewijs"
                 }
               }
             ]
